--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -20,9 +20,9 @@
                         <span class="glyphicon glyphicon-cloud-upload upload-icon" aria-hidden="true"></span>
                         <span class="sr-only">Upload</span>
                     </label>
-                    <input id="fileupload" type="file" name="files[]" data-toggle="tooltip" data-placement="bottom" title="Max File Size: {{{ $maxFileSize }}}" multiple>
+                    <input id="fileupload" type="file" name="files[]" data-toggle="tooltip" data-placement="bottom" title="Max File Size: maxFileSize" multiple>
                     <input type="hidden" name="_method" value="PUT">
-                    <input type="hidden" name="dirPath" value="{{{ $path }}}">
+                    <input type="hidden" name="dirPath" value="path">
                 </form>
             </div>
             <button id="new_folder" type="button" class="btn btn-default" aria-label="New Folder">
@@ -36,24 +36,24 @@
 </div>
 
 <div class="container-fluid">
-	<div id="file_system" class="row" data-dirpath="{{{ $path }}}" data-maxfilesize="{{{ $maxFileSizeBytes }}}">
-        @foreach ($objects as $object)
+	<div id="file_system" class="row" data-dirpath="path" data-maxfilesize="maxFileSizeBytes">
+
             <div class="col-xs-4 col-sm-3 col-md-2 object-container">
-                <div class="object" data-filetype="{{{ $object->type }}}" data-fullpath="{{{ $object->path }}}" data-ext="" data-basename="{{{ $object->pathinfo['basename'] }}}">
+                <div class="object" data-filetype="type" data-fullpath="path" data-ext="" data-basename="basename">
                     <div class="icon-container">
-                        <div class="icon-base {{{ $object->type }}}"></div>
+                        <div class="icon-base file"></div>
                         <div class="icon-main"></div>
                     </div>
                     <div class="name-container">
-                        <div role="button" class="name text-primary" title="{{{ $object->pathinfo['basename'] }}}">
-                            <a class="link" href="{{{ $object->url }}}">{{{ $object->basename }}}</a>
+                        <div role="button" class="name text-primary" title="basename">
+                            <a class="link" href="url">basename</a>
                             <a href="#" class="hide rename"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></a>
                         </div>
-                        <div class="meta-info text-muted">{{{ $object->lastModified }}}</div>
+                        <div class="meta-info text-muted">lastModified</div>
                     </div>
                 </div>
             </div>
-        @endforeach
+
 	</div>
 </div>
-{% end block %}
+{% endblock %}
