--- a/app/templates/user/register.html
+++ b/app/templates/user/register.html
@@ -1,11 +1,10 @@
 {% extends "base.html" %}
-
 {% block content %}
 <div class="container-fluid">
 	<div class="row">
 		<div class="col-md-8 col-md-offset-2">
 			<div class="panel panel-default">
-				<div class="panel-heading">Login</div>
+				<div class="panel-heading">Register</div>
 				<div class="panel-body">
 					{% if get_flashed_messages() %}
 						<div class="alert alert-danger">
@@ -18,8 +17,15 @@
 						</div>
 					{% endif %}
 
-					<form class="form-horizontal" role="form" method="POST" action="{{ url_for('main.index') }}">
+					<form class="form-horizontal" role="form" method="POST" action="user/register">
 						<input type="hidden" name="_token" value="{{ csrf_token() }}">
+
+						<div class="form-group">
+							<label class="col-md-4 control-label">Name</label>
+							<div class="col-md-6">
+								<input type="text" class="form-control" name="name">
+							</div>
+						</div>
 
 						<div class="form-group">
 							<label class="col-md-4 control-label">E-Mail Address</label>
@@ -36,20 +42,17 @@
 						</div>
 
 						<div class="form-group">
-							<div class="col-md-6 col-md-offset-4">
-								<div class="checkbox">
-									<label>
-										<input type="checkbox" name="remember"> Remember Me
-									</label>
-								</div>
+							<label class="col-md-4 control-label">Confirm Password</label>
+							<div class="col-md-6">
+								<input type="password" class="form-control" name="password_confirmation">
 							</div>
 						</div>
 
 						<div class="form-group">
 							<div class="col-md-6 col-md-offset-4">
-								<button type="submit" class="btn btn-primary">Login</button>
-
-								<a class="btn btn-link" href="">Forgot Your Password?</a>
+								<button type="submit" class="btn btn-primary">
+									Register
+								</button>
 							</div>
 						</div>
 					</form>
