--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -29,20 +29,20 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="/main/home.html">File Manager</a>
+				<a class="navbar-brand" href="{{ url_for('main.index') }}">File Manager</a>
 			</div>
 
 			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 				<ul class="nav navbar-nav navbar-right">
-					{% if current_user.is_authenticated %}
+					{% if not current_user.is_authenticated %}
 
-						<li><a href="{{ url_for('main.index') }}">Login</a></li>
-						<li><a href="/user/register.html">Register</a></li>
+						<li><a href="{{ url_for('user.login') }}">Login</a></li>
+						<li><a href="{{ url_for('user.register') }}">Register</a></li>
 					{% else %}
 						<li class="dropdown">
-							<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">LYH <span class="caret"></span></a>
+							<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">{{ current_user.name }} <span class="caret"></span></a>
 							<ul class="dropdown-menu" role="menu">
-								<li><a href="/user/logout.html">Logout</a></li>
+								<li><a href="{{ url_for('user.logout') }}">Logout</a></li>
 							</ul>
 						</li>
 					{% endif %}
@@ -56,6 +56,6 @@
 	<!-- Scripts -->
 	<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 	<script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.1/js/bootstrap.min.js"></script>
-    <script src="{{ url_for('static', filename='js/app.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/app.js')}}"></script>
 </body>
 </html>
