--- a/app/templates/user/login.html
+++ b/app/templates/user/login.html
@@ -18,8 +18,8 @@
 						</div>
 					{% endif %}
 
-					<form class="form-horizontal" role="form" method="POST" action="{{ url_for('main.index') }}">
-						<input type="hidden" name="_token" value="{{ csrf_token() }}">
+					<form class="form-horizontal" role="form" method="POST" action="{{ url_for('user.login') }}">
+						<input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
 
 						<div class="form-group">
 							<label class="col-md-4 control-label">E-Mail Address</label>
