--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-
+{% import "macro.html" as macros %}
 {% block content %}
 <div class="container-fluid">
     <div class="row">
@@ -20,40 +20,67 @@
                         <span class="glyphicon glyphicon-cloud-upload upload-icon" aria-hidden="true"></span>
                         <span class="sr-only">Upload</span>
                     </label>
-                    <input id="fileupload" type="file" name="files[]" data-toggle="tooltip" data-placement="bottom" title="Max File Size: maxFileSize" multiple>
+                    <input id="fileupload" type="file" name="files[]" data-toggle="tooltip" data-placement="bottom" title="Max File Size: {{ maxfilesize }}" multiple>
                     <input type="hidden" name="_method" value="PUT">
-                    <input type="hidden" name="dirPath" value="path">
+                    <input type="hidden" name="dirPath" value="{{ path }}">
                 </form>
             </div>
-            <button id="new_folder" type="button" class="btn btn-default" aria-label="New Folder">
+            <button id="new_folder" type="button" class="btn btn-default" aria-label="New Folder" data-toggle="modal"  data-target="#myModal">
                 <span class="glyphicon glyphicon-folder-close" aria-hidden="true"></span> New Folder
             </button>
-            <button id="delete_object" type="button" class="btn btn-default" aria-label="Delete Objects">
+            <button id="delete_object" type="button" class="btn btn-default" aria-label="Delete Objects" disabled>
                 <span class="glyphicon glyphicon-trash" aria-hidden="true"></span> Delete
+            </button>
+            <button id="download_file" type="button" class="btn btn-default" aria-label="Download File" disabled>
+                <span class="glyphicon glyphicon-cloud-download" aria-hidden="true"></span> Download
             </button>
         </div>
     </div>
 </div>
 
 <div class="container-fluid">
-	<div id="file_system" class="row" data-dirpath="path" data-maxfilesize="maxFileSizeBytes">
-
+	<div id="file_system" class="row" data-dirpath="{{ path }}" data-maxfilesize="{{ maxfilesizebytes }}">
+        {% for object in objects.items%}
             <div class="col-xs-4 col-sm-3 col-md-2 object-container">
-                <div class="object" data-filetype="type" data-fullpath="path" data-ext="" data-basename="basename">
+                <div class="object" data-filetype="{{ object.type }}" data-fullpath="{{ object.path }}" data-ext="" data-basename="{{ object.pathinfo.basename }}">
                     <div class="icon-container">
-                        <div class="icon-base file"></div>
+                        <div class="icon-base {{ object.type }}"></div>
                         <div class="icon-main"></div>
                     </div>
                     <div class="name-container">
-                        <div role="button" class="name text-primary" title="basename">
-                            <a class="link" href="url">basename</a>
+                        <div role="button" class="name text-primary" title="{{ object.pathinfo.basename }}">
+                            <a class="link" href="{{ object.url }}">{{ object.pathinfo.basename }}</a>
                             <a href="#" class="hide rename"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></a>
                         </div>
-                        <div class="meta-info text-muted">lastModified</div>
+                        <div class="meta-info text-muted">{{ object.lastModified }}</div>
                     </div>
                 </div>
             </div>
-
+        {% endfor %}
 	</div>
+    {% if objects.last_page != objects.first_page %}
+    {{ macros.pagination_widget(objects, 'main.index', path=path) }}
+    {% endif %}
+</div>
+
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+	<div class="modal-dialog">
+		<div class="modal-content">
+			<div class="modal-header">
+				<button type="button" class="close" data-dismiss="modal" aria-hidden="true">
+					&times;
+				</button>
+				<h4 class="modal-title" id="myModalLabel">
+					文件上传进度：
+				</h4>
+			</div>
+			<div class="modal-body">
+			</div>
+			<div class="modal-footer">
+				<button type="button" class="btn btn-default" data-dismiss="modal">关闭
+				</button>
+			</div>
+		</div><!-- /.modal-content -->
+	</div><!-- /.modal -->
 </div>
 {% endblock %}
