--- a/app/templates/user/login.html
+++ b/app/templates/user/login.html
@@ -49,7 +49,7 @@
 							<div class="col-md-6 col-md-offset-4">
 								<button type="submit" class="btn btn-primary">Login</button>
 
-								<a class="btn btn-link" href="">Forgot Your Password?</a>
+								<a class="btn btn-link" href="{{ url_for('user.password_reset_request') }}">Forgot Your Password?</a>
 							</div>
 						</div>
 					</form>
